feat:Add Navbar Component  and Home Page.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Playwrite+MX:wght@100..400&family=Playwrite+US+Trad:wght@100..400&display=swap');
 .App {
   text-align: center;
 }
